--- a/style.css
+++ b/style.css
@@ -7,3 +7,15 @@
 body {
   background-color: peru;
 }
+
+header {
+  background-color: beige;
+}
+
+#game-info {
+  background-color: beige;
+}
+
+#shop-container {
+  background-color: darkkhaki;
+}
