--- a/style.css
+++ b/style.css
@@ -6,31 +6,48 @@
 
 body {
   background-color: peru;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 3fr 2fr 4fr;
 }
 
 header {
   background-color: beige;
-  height: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  /* height: 5rem; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 #garden {
-  height: 25rem;
+  background-color: rgb(175, 212, 120);
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+/* height: 25rem;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; */
+/* } */
 
 #game-info {
   background-color: beige;
-  height: 10rem;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  /* height: 10rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 3rem; */
   font-size: 2rem;
 }
 
@@ -40,18 +57,36 @@ header {
 
 #shop-container {
   background-color: darkkhaki;
+  grid-row-start: 4;
+  grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 3;
 }
 
-#shop-upgrades {
+/* #shop-upgrades {
   display: flex;
   justify-content: flex-start;
-  padding-top: 3rem;
-}
+  padding-top: 1rem;
+  /* padding-left: 25% */
+/* gap: 1rem;
+} */
 
-h2 {
+/* h2 {
   padding: 1rem;
   display: flex;
   justify-content: center;
+} */
+
+.shop-element {
+  background-color: pink;
+  font-size: 1rem;
+  border-color: black;
+  border-radius: 5%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 150px;
+  width: 150px; */
 }
 
 #flower-icon {
