--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {
   grid-row-gap: 2rem;
   /* display: grid; */
   /* grid-template-rows: auto auto auto; */
+  position: relative;
 }
 
 #garden {
@@ -35,6 +36,21 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  margin-top: 2rem;
+  /* display: inline-block; */
+}
+
+#click-feedback {
+  position: absolute;
+  top: 20%;
+  left: 55%;
+  transform: translate (-50%, -80%);
+  pointer-events: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 4px black;
 }
 
 #game-info {
@@ -50,16 +66,25 @@ header {
 #flower-counter {
   background-color: rgb(175, 212, 120);
   padding: 3rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 4px black;
 }
 
 #fps-counter {
   background-color: rgb(175, 212, 120);
   padding: 3rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 4px black;
 }
 
 #pause-button {
   padding: 0.5rem;
   margin-right: 3rem;
+  font-weight: bold;
 }
 
 #shop-container {
